--- a/css/footer.css
+++ b/css/footer.css
@@ -14,6 +14,8 @@ footer div.wrap {
 }
 footer div.wrap ul.fnb {
   grid-column: 1 / span 2;
+  display: flex;
+  justify-content: space-between;
 }
 footer div.wrap ul.fnb li {
   
@@ -22,9 +24,7 @@ footer div.wrap ul.fnb li a {
   padding-right: 10px;
   display: block;
   line-height: 1.2;
-}
-footer div.wrap ul.fnb li:nth-child(4) a{
-  color:#fff;
+  text-align: center;
 }
 footer div.wrap address {
   
@@ -89,4 +89,9 @@ footer .btop{
   position: fixed;
   right: 60px;
   bottom: calc(234.8px - 40px);
+}
+footer h2{
+  
+  font-size: 20px;
+  margin-bottom: 25px;
 }
